tests/accept/basic.ul
void main() {
}

int[5] foo() {
}