tests/reject/bad_assign_3.ul
int[3] foo() {
  int[3] x;
  return x;
}

void main() {
  int[2] x;
  x = foo();
}
